# Voice-Rag

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.zh.md  PLAN.zh.md
src/voice_rag/: __init__.py  chunk.py  cli.py  config.py  embed.py  index.py  models.py  rag.py
src/voice_rag/api/: __init__.py  main.py
src/voice_rag/stores/: __init__.py  chroma_store.py
tests/: conftest.py  test_chroma_filters.py  test_chunk.py  test_config_strict.py  test_index_io.py  test_models_io.py  test_parse_json.py  test_rag_query_io.py  test_rag_sanitize.py  test_smoke.py  test_where.py
