[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-rag"
version = "0.1.0"
description = "B2B voice + text knowledge pipeline with RAG (see SPEC.md)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Voice RAG contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
voice-rag = "voice_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
